E1 - Add make clean, Update lexical errors readme specification

--- a/etapa1/Makefile
+++ b/etapa1/Makefile
@@ -3,3 +3,5 @@ all:
 	gcc -c lex.yy.c -lfl
 	gcc -c main.c
 	gcc lex.yy.o main.o -o etapa1 -lfl
+clean:
+	rm etapa1 lex.yy.c lex.yy.o main.o etapa1.tgz
