E2 - Prepare Makefile to output correct file

--- a/etapa2/Makefile
+++ b/etapa2/Makefile
@@ -3,6 +3,6 @@ all:
 	flex scanner.l
 	gcc -c lex.yy.c -lfl
 	gcc -c main.c parser.tab.c
-	gcc lex.yy.o main.o parser.tab.o -o parser -lfl
+	gcc lex.yy.o main.o parser.tab.o -o etapa2 -lfl
 clean:
-	rm parser parser.tab.h parser.tab.c parser.tab.o lex.yy.c lex.yy.o main.o
+	rm etapa2 parser.tab.h parser.tab.c parser.tab.o lex.yy.c lex.yy.o main.o
