--- a/etapa3/Makefile
+++ b/etapa3/Makefile
@@ -1,8 +1,9 @@
 all:
 	bison -d parser.y
 	flex scanner.l
+	gcc -c ast.c -Wall
 	gcc -c lex.yy.c -lfl
 	gcc -c main.c parser.tab.c
-	gcc lex.yy.o main.o parser.tab.o -o etapa3 -lfl
+	gcc lex.yy.o main.o ast.o parser.tab.o -o etapa3 -lfl
 clean:
 	rm etapa3 parser.tab.h parser.tab.c parser.tab.o lex.yy.c lex.yy.o main.o
